# agent

./: .gitignore  CMakeLists.txt  pyproject.toml
data/: .env  icon.txt  prompt.txt
include/: config.h  db_interface.h  llm_interface.h  user_preferences.h
src/: db_interface.cpp  llm_interface.cpp  main.cpp  user_preferences.cpp
src/python/: config.py  helper.py  order_helper.py  ranker.py  temp.py
